[gd_scene load_steps=29 format=3 uid="uid://cix41ululiw0l"]

[ext_resource type="Texture2D" uid="uid://74was2yb6wux" path="res://Sprites/Menu/spr_characterBackColorThing.png" id="1_4vu3u"]
[ext_resource type="Script" path="res://Scripts/Systems/CharacterSelectScreen.gd" id="1_y5w34"]
[ext_resource type="Texture2D" uid="uid://d0xpxutegggs0" path="res://Sprites/Menu/spr_tileBack.png" id="2_ogrnj"]
[ext_resource type="Texture2D" uid="uid://c38ayrqnpv1mc" path="res://Sprites/Menu/spr_characterNames.png" id="3_wshet"]
[ext_resource type="Texture2D" uid="uid://j245bqiu43vb" path="res://Characters/Karu/Sprites/portrait.png" id="5_ejmei"]
[ext_resource type="Texture2D" uid="uid://dquxje6w5aw0n" path="res://Sprites/Menu/spr_characterSelectText.png" id="6_gn4d3"]
[ext_resource type="Shader" path="res://Scripts/Shaders/PaletteSwap.gdshader" id="6_waa1s"]
[ext_resource type="Texture2D" uid="uid://ds4kopf072jg8" path="res://Sprites/Menu/spr_altPicker.png" id="7_7p7qg"]
[ext_resource type="Texture2D" uid="uid://curqvog0lrg23" path="res://Sprites/Menu/spr_loading.png" id="9_ijpee"]

[sub_resource type="ShaderMaterial" id="ShaderMaterial_ipgtv"]
shader = ExtResource("6_waa1s")

[sub_resource type="ShaderMaterial" id="ShaderMaterial_ngk4f"]
shader = ExtResource("6_waa1s")

[sub_resource type="ShaderMaterial" id="ShaderMaterial_d1o43"]
shader = ExtResource("6_waa1s")

[sub_resource type="ShaderMaterial" id="ShaderMaterial_g2e1m"]
shader = ExtResource("6_waa1s")

[sub_resource type="Animation" id="Animation_uajcq"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("HBoxContainer:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(-272, 0)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("TextureRect2:position")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(-256, 0)]
}

[sub_resource type="Animation" id="Animation_3pd50"]
resource_name = "Scroll"
length = 0.3
step = 0.05
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("HBoxContainer:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.3),
"transitions": PackedFloat32Array(0.203063, 1),
"update": 0,
"values": [Vector2(240, 0), Vector2(-268, 0)]
}
tracks/1/type = "method"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath(".")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"values": [{
"args": [],
"method": &"update_texture_rects"
}]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("TextureRect2:visible")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [true]
}
tracks/3/type = "value"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath("TextureRect2:position")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(0, 0.3),
"transitions": PackedFloat32Array(0.203063, 1),
"update": 0,
"values": [Vector2(-256, 0), Vector2(-768, 0)]
}

[sub_resource type="Animation" id="Animation_0ia1d"]
resource_name = "ScrollLeft"
length = 0.3
step = 0.05
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("HBoxContainer:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.3),
"transitions": PackedFloat32Array(0.203063, 1e-05),
"update": 0,
"values": [Vector2(-768, 0), Vector2(-272, 0)]
}
tracks/1/type = "method"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath(".")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"values": [{
"args": [],
"method": &"update_texture_rects"
}]
}

[sub_resource type="Animation" id="Animation_eicgk"]
resource_name = "ScrollLeft_2"
length = 0.3
step = 0.05
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("HBoxContainer:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.3),
"transitions": PackedFloat32Array(0.203063, 1),
"update": 0,
"values": [Vector2(240, 0), Vector2(-268, 0)]
}
tracks/1/type = "method"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath(".")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"values": [{
"args": [],
"method": &"update_texture_rects"
}]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_acf3w"]
_data = {
"RESET": SubResource("Animation_uajcq"),
"Scroll": SubResource("Animation_3pd50"),
"ScrollLeft": SubResource("Animation_0ia1d"),
"ScrollLeft_2": SubResource("Animation_eicgk")
}

[sub_resource type="Animation" id="Animation_ubodk"]
resource_name = "CharacterSelected"
length = 0.3
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("ColorRect:color")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.3),
"transitions": PackedFloat32Array(0.217638, 0.120742),
"update": 0,
"values": [Color(0, 0, 0, 0), Color(0, 0, 0, 1)]
}

[sub_resource type="Animation" id="Animation_r7fnj"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("ParallaxBackground/ColorRect:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(0, 540)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("ParallaxBackground/ParallaxLayer2/Names:scale")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(2, 2)]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("ParallaxBackground/ParallaxLayer2/Names2:scale")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(2, 2)]
}
tracks/3/type = "value"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath("ParallaxBackground/ParallaxLayer2/Names3:scale")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(2, 2)]
}
tracks/4/type = "value"
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/path = NodePath("ParallaxBackground/ParallaxLayer2:position")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(0, 0)]
}
tracks/5/type = "value"
tracks/5/imported = false
tracks/5/enabled = true
tracks/5/path = NodePath("ColorRect:color")
tracks/5/interp = 1
tracks/5/loop_wrap = true
tracks/5/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Color(0, 0, 0, 1)]
}
tracks/6/type = "value"
tracks/6/imported = false
tracks/6/enabled = true
tracks/6/path = NodePath("SprCharacterSelectText:position")
tracks/6/interp = 1
tracks/6/loop_wrap = true
tracks/6/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(160, -96)]
}

[sub_resource type="Animation" id="Animation_c6vls"]
resource_name = "barShowUp"
length = 0.5
step = 0.05
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("ParallaxBackground/ColorRect:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0.05, 0.5),
"transitions": PackedFloat32Array(0.225313, 0.225313),
"update": 0,
"values": [Vector2(0, 540), Vector2(0, 480)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("ParallaxBackground/ParallaxLayer2/Names:scale")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0.25, 0.5),
"transitions": PackedFloat32Array(0.225313, 0.225313),
"update": 0,
"values": [Vector2(2, 1e-05), Vector2(2, 2)]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("ParallaxBackground/ParallaxLayer2/Names2:scale")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0.25, 0.5),
"transitions": PackedFloat32Array(0.225313, 0.225313),
"update": 0,
"values": [Vector2(2, 0), Vector2(2, 2)]
}
tracks/3/type = "value"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath("ParallaxBackground/ParallaxLayer2/Names3:scale")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(0.25, 0.5),
"transitions": PackedFloat32Array(0.225313, 0.225313),
"update": 0,
"values": [Vector2(2, 0), Vector2(2, 2)]
}
tracks/4/type = "value"
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/path = NodePath("ParallaxBackground/ParallaxLayer2:position")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/keys = {
"times": PackedFloat32Array(0.5),
"transitions": PackedFloat32Array(0.225313),
"update": 0,
"values": [Vector2(0, 0)]
}
tracks/5/type = "value"
tracks/5/imported = false
tracks/5/enabled = true
tracks/5/path = NodePath("ColorRect:color")
tracks/5/interp = 1
tracks/5/loop_wrap = true
tracks/5/keys = {
"times": PackedFloat32Array(0, 0.25),
"transitions": PackedFloat32Array(0.225313, 1),
"update": 0,
"values": [Color(0, 0, 0, 1), Color(0, 0, 0, 0)]
}
tracks/6/type = "value"
tracks/6/imported = false
tracks/6/enabled = true
tracks/6/path = NodePath("SprCharacterSelectText:position")
tracks/6/interp = 1
tracks/6/loop_wrap = true
tracks/6/keys = {
"times": PackedFloat32Array(0, 0.45),
"transitions": PackedFloat32Array(0.225313, 0.225313),
"update": 0,
"values": [Vector2(160, -96), Vector2(160, -24)]
}

[sub_resource type="Animation" id="Animation_j6asn"]
resource_name = "nameChange"
length = 0.3
step = 0.05
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("ParallaxBackground/ParallaxLayer2/Names:scale")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.3),
"transitions": PackedFloat32Array(0.225313, 0.225313),
"update": 0,
"values": [Vector2(2, 1e-05), Vector2(2, 2)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("ParallaxBackground/ParallaxLayer2/Names2:scale")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.3),
"transitions": PackedFloat32Array(0.225313, 0.225313),
"update": 0,
"values": [Vector2(2, 0), Vector2(2, 2)]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("ParallaxBackground/ParallaxLayer2/Names3:scale")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0, 0.3),
"transitions": PackedFloat32Array(0.225313, 0.225313),
"update": 0,
"values": [Vector2(2, 0), Vector2(2, 2)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_jqbhu"]
_data = {
"CharacterSelected": SubResource("Animation_ubodk"),
"RESET": SubResource("Animation_r7fnj"),
"barShowUp": SubResource("Animation_c6vls"),
"nameChange": SubResource("Animation_j6asn")
}

[sub_resource type="AtlasTexture" id="AtlasTexture_gegtj"]
atlas = ExtResource("9_ijpee")
region = Rect2(0, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_6cy51"]
atlas = ExtResource("9_ijpee")
region = Rect2(64, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_v27ay"]
atlas = ExtResource("9_ijpee")
region = Rect2(128, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_na86f"]
atlas = ExtResource("9_ijpee")
region = Rect2(192, 0, 64, 64)

[sub_resource type="SpriteFrames" id="SpriteFrames_vc41g"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_gegtj")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_6cy51")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_v27ay")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_na86f")
}],
"loop": true,
"name": &"default",
"speed": 10.0
}]

[node name="CharacterSelect" type="Control"]
layout_mode = 3
anchors_preset = 0
offset_top = 24.0
offset_bottom = 24.0
mouse_filter = 2
script = ExtResource("1_y5w34")

[node name="ParallaxBackground" type="ParallaxBackground" parent="."]
scroll_offset = Vector2(1, 1)

[node name="ParallaxLayer" type="ParallaxLayer" parent="ParallaxBackground"]
texture_repeat = 2
motion_mirroring = Vector2(1920, 64)

[node name="tileBack" type="Sprite2D" parent="ParallaxBackground/ParallaxLayer"]
texture_repeat = 2
scale = Vector2(2, 2)
texture = ExtResource("2_ogrnj")
centered = false
region_enabled = true
region_rect = Rect2(0, 0, 960, 540)

[node name="ColorRect" type="ColorRect" parent="ParallaxBackground"]
offset_top = 540.0
offset_right = 960.0
offset_bottom = 603.999
pivot_offset = Vector2(0, 64)
mouse_filter = 2
color = Color(0, 0, 0, 1)

[node name="ParallaxLayer2" type="ParallaxLayer" parent="ParallaxBackground"]
motion_mirroring = Vector2(190, 0)

[node name="Names" type="Sprite2D" parent="ParallaxBackground/ParallaxLayer2"]
z_index = 20
texture_repeat = 2
position = Vector2(0, 512)
scale = Vector2(2, 2)
texture = ExtResource("3_wshet")
centered = false
offset = Vector2(0, -15)
hframes = 7
region_enabled = true
region_rect = Rect2(0, 0, 665, 32)

[node name="Names2" type="Sprite2D" parent="ParallaxBackground/ParallaxLayer2"]
z_index = 20
texture_repeat = 2
position = Vector2(380, 512)
scale = Vector2(2, 2)
texture = ExtResource("3_wshet")
centered = false
offset = Vector2(0, -15)
hframes = 7
region_enabled = true
region_rect = Rect2(0, 0, 665, 32)

[node name="Names3" type="Sprite2D" parent="ParallaxBackground/ParallaxLayer2"]
z_index = 20
texture_repeat = 2
position = Vector2(760, 512)
scale = Vector2(2, 2)
texture = ExtResource("3_wshet")
centered = false
offset = Vector2(0, -15)
hframes = 7
region_enabled = true
region_rect = Rect2(0, 0, 665, 32)

[node name="SprWorldBackColorThing" type="Sprite2D" parent="."]
position = Vector2(304, 64)
scale = Vector2(2, 2)
texture = ExtResource("1_4vu3u")
centered = false
hframes = 7

[node name="SprCharacterSelectText" type="Sprite2D" parent="."]
position = Vector2(160, -96)
scale = Vector2(2, 2)
texture = ExtResource("6_gn4d3")
centered = false

[node name="HBoxContainer" type="HBoxContainer" parent="."]
custom_minimum_size = Vector2(960, 540)
layout_mode = 2
offset_left = -272.0
offset_right = 2244.0
offset_bottom = 540.0
mouse_filter = 2

[node name="TextureRectLeft" type="TextureRect" parent="HBoxContainer"]
material = SubResource("ShaderMaterial_ipgtv")
custom_minimum_size = Vector2(500, 250)
layout_mode = 2
mouse_filter = 2
texture = ExtResource("5_ejmei")
stretch_mode = 4

[node name="TextureRect" type="TextureRect" parent="HBoxContainer"]
material = SubResource("ShaderMaterial_ngk4f")
custom_minimum_size = Vector2(500, 250)
layout_mode = 2
mouse_filter = 2
texture = ExtResource("5_ejmei")
stretch_mode = 4

[node name="TextureRectRight" type="TextureRect" parent="HBoxContainer"]
material = SubResource("ShaderMaterial_d1o43")
custom_minimum_size = Vector2(500, 250)
layout_mode = 2
mouse_filter = 2
texture = ExtResource("5_ejmei")
stretch_mode = 4

[node name="TextureRectLeft2" type="TextureRect" parent="HBoxContainer"]
material = SubResource("ShaderMaterial_g2e1m")
custom_minimum_size = Vector2(500, 250)
layout_mode = 2
mouse_filter = 2
texture = ExtResource("5_ejmei")
stretch_mode = 4

[node name="TextureRect2" type="TextureRect" parent="."]
visible = false
custom_minimum_size = Vector2(500, 250)
layout_mode = 2
offset_left = -256.0
offset_right = 244.0
offset_bottom = 540.0
mouse_filter = 2
texture = ExtResource("5_ejmei")
stretch_mode = 4

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
libraries = {
"": SubResource("AnimationLibrary_acf3w")
}
speed_scale = 1.5

[node name="AnimationPlayer2" type="AnimationPlayer" parent="."]
libraries = {
"": SubResource("AnimationLibrary_jqbhu")
}

[node name="AltSelector" type="Sprite2D" parent="."]
position = Vector2(372, 408)
scale = Vector2(2, 2)
texture = ExtResource("7_7p7qg")
centered = false
hframes = 4

[node name="ColorRect" type="ColorRect" parent="."]
layout_mode = 0
offset_top = -28.0
offset_right = 1136.0
offset_bottom = 576.0
mouse_filter = 2
color = Color(0, 0, 0, 1)

[node name="LoadingCircle" type="AnimatedSprite2D" parent="ColorRect"]
visible = false
position = Vector2(816, 392)
scale = Vector2(2, 2)
sprite_frames = SubResource("SpriteFrames_vc41g")
autoplay = "default"
centered = false

[connection signal="animation_finished" from="AnimationPlayer2" to="." method="_on_animation_player_2_animation_finished"]
